--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               {
                 "input": "./node_modules/bootstrap/dist/css/bootstrap.css"
               }
